[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "gymnasium>=1.2.3",
  "numpy<2.0",
  "pygame>=2.6.1",
  "tensorflow==2.15",
]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
